feat: add blocks filter, products, card_product; add plugins HtmlWebpackPlugin, CleanWebpackPlugin to webpack

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online-story</title>
 </head>
 <body>
     <header>
@@ -12,7 +12,6 @@
             <a href="#" class="header__logo">ONLINE STORE</a>
             <p class="header__count">count <span>0</span></p>
             <div class="header__cart">
-                <img class="img__cart" src="./assets/pngwing.com.png" alt="cart">
             </div>
           </div>
     </header>
@@ -29,6 +28,5 @@
             </div>
           </div>
     </footer>
-    <script src="../dist/script.js"></script>
 </body>
 </html>
