feat: add page-cart and page-details

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,13 @@
 <body>
     <header>
         <div class="wrapper wrapper_header">
-            <a href="#" class="header__logo">ONLINE STORE</a>
+            <a href="#main-page" class="header__logo">ONLINE STORE</a>
             <p class="header__count">count <span>0</span></p>
-            <div class="header__cart">
-            </div>
+            <a href="#cart-page" class="header__cart">
+            </a>
           </div>
     </header>
     <main>
-        <div class="wrapper wrapper_main"></div>
     </main>
     <footer>
         <div class="wrapper wrapper_footer">
