feat: add classes elements

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
     <header>
         <div class="wrapper wrapper_header">
             <a href="#main-page" class="header__logo">ONLINE STORE</a>
-            <p class="header__count">count <span>0</span></p>
-            <a href="#cart-page" class="header__cart">
-            </a>
+            <p class="header__count">count <span id="allPrice">0</span></p>
+                <a href="#cart-page" class="header__cart"><p id="count__cart">0</p></a>
           </div>
     </header>
     <main>
