feat: add functional cart

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online-story</title>
+    <title>Online-store</title>
 </head>
 <body>
     <header>
         <div class="wrapper wrapper_header">
             <a href="#main-page" class="header__logo">ONLINE STORE</a>
-            <p class="header__count">count <span id="allPrice">0</span></p>
+            <p class="header__count">Cart total: <span id="allPrice">0</span></p>
                 <a href="#cart-page" class="header__cart"><p id="count__cart">0</p></a>
           </div>
     </header>
